infra/k8s/products/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-deployment
spec:
  selector:
    matchLabels:
      app: products-deployment
  template:
    metadata:
      labels:
        app: products-deployment
    spec:
      containers:
      - name: products
        image: products:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081
