infra/k8s/products/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-service
spec:
  selector:
    app: products-deployment
  ports:
  - port: 3002
    targetPort: 8081
